added links and images

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 
 <body>
     <h1>Homepage</h1>
-    <a>click me</a>
+    <a href="https://www.theodinproject.com/about">click me</a>
+
+    <a href="pages/about.html">About</a>
+
+    <img src="./images/dog.jpg" alt="Black dog image" height="310" width="310">
 </body>
